# Vulkan-GPU-Compute-Microbenchmark

./: .gitattributes  .gitignore  AMD C++ GPU Engineer - New Graduate JD.md  CMakeLists.txt  Makefile  README.md  Resume.md
3D Mark Result/6900XT/: 6900xt-fs-result.3dmark-result  6900xt-sn-dx12-result.3dmark-result  6900xt-snl-dx12-result.3dmark-result  6900xt-snl-vk-result.3dmark-result
3D Mark Result/R5 7600/: R57600-snl-dx12-result.3dmark-result
3DMark Results/6600XT/: 6600XT-api-result.3dmark-result  6600XT-fs-result.3dmark-result  6600XT-snl-vk-result.3dmark-result  6600XT-ts-result.3dmark-result
3DMark Results/6900XT/: 6900xt-sn-vk-result.3dmark-result  6900xt-ts-result.3dmark-result
3DMark Results/Adreno640/: Adreno640-api-result.3dmark-result  Adreno640-cg-result.3dmark-result  Adreno640-fs-result.3dmark-result  Adreno640-is-result.3dmark-result  Adreno640-ise-result.3dmark-result  Adreno640-nr-result.3dmark-result  Adreno640-snl-vk-result.3dmark-result  Adreno640-ts-result.3dmark-result  Adreno640-wl-dx12-result.3dmark-result  Adreno640-wle-dx12-result.3dmark-result
3DMark Results/D700/: D700-api-result.3dmark-result  D700-fs-result.3dmark-result  D700-sn-dx12-result.3dmark-result  D700-snl-dx12-result.3dmark-result  D700-ts-result.3dmark-result
3DMark Results/GT120/: GT120-cg-result.3dmark-result  GT120-is-result.3dmark-result  GT120-ise-result.3dmark-result
3DMark Results/GTX970/: GTX970-api-result.3dmark-result  GTX970-cg-result.3dmark-result  GTX970-fs-result.3dmark-result  GTX970-is-result.3dmark-result  GTX970-ise-result.3dmark-result  GTX970-sn-dx12-result.3dmark-result  GTX970-sn-vk-result.3dmark-result  GTX970-snl-dx12-result.3dmark-result  GTX970-snl-vk-result.3dmark-result  GTX970-ts-result.3dmark-result
3DMark Results/HD5770/: HD5770-api-result.3dmark-result  HD5770-fs-result.3dmark-result
3DMark Results/R5 7600/: R57600-api-result.3dmark-result  R57600-fs-result.3dmark-result  R57600-sn-dx12-result.3dmark-result  R57600-sn-vk-result.3dmark-result  R57600-snl-vk-result.3dmark-result  R57600-ts-result.3dmark-result
3DMark Results/RX580/: RX580-api-result.3dmark-result  RX580-fs-result.3dmark-result  RX580-sn-dx12-result.3dmark-result  RX580-sn-vk-result.3dmark-result  RX580-snl-dx12-result.3dmark-result  RX580-snl-vk-result.3dmark-result  RX580-ts-result.3dmark-result
3DMark Results/RX6600XT/: 6600XT-sn-dx12-result.3dmark-result  6600XT-sn-vk-result.3dmark-result  6600XT-snl-dx12-result.3dmark-result
3DMark Results/RX6900XT/: 6900XT-blue-result.vrmark-result  6900XT-cyan-result.vrmark-result  6900XT-orange-result.vrmark-result  6900xt-api-result.3dmark-result  R5 7600-cp-result.3dmark-result
3DMark Results/RX9070XT/: RX9070XT-api-result.3dmark-result  (+6 more)
docs/: benchmark-report.md  building.md  rdoc_comparison.md  renderdoc-analysis.md  renderdoc-capture-guide.md  report.html  report.md  results-table.md  roadmap.md  woa-dx11-timestamp-issue.md
kernels/: matmul_local.cl  matmul_naive.cl
ohos/: README.md  README.zh-CN.md
ohos/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  vulkan_renderer.cpp  vulkan_renderer.h
rdoc_captures/: DX11_AMD_FirePro_D700__FireGL_V__#1_capture.json  DX11_AMD_FirePro_D700__FireGL_V__#2_capture.json  DX11_AMD_Radeon_HD_5700_Series_capture.json  DX11_AMD_Radeon_RX_6600_XT_capture.json  DX11_AMD_Radeon_RX_6900_XT_capture.json  DX11_AMD_Radeon_RX_6900_XT_flights3_particles1048576_capture.json  DX11_AMD_Radeon_RX_6900_XT_particles16777216_capture.json  DX11_AMD_Radeon_RX_9070_XT_capture.json  DX11_AMD_Radeon_RX_9070_XT_flights3_particles1048576_capture.json  DX11_AMD_Radeon_RX_9070_XT_flights4_particles1048576_capture.json  DX11_AMD_Radeon_RX_9070_XT_particles16777216_capture.json  DX11_AMD_Radeon_TM_7600_Graphics_capture.json  DX11_AMD_Radeon_TM__Graphics_capture.json  DX11_E5-2697v2_Microsoft_Basic_Render_Driver_capture.json  DX11_Mi_Pad_5_Adreno_640_GPU_particles1048576_capture.json  DX11_Microsoft_Basic_Render_Driver_capture.json  DX11_Microsoft_Basic_Render_Driver_particles1048576_capture.json  DX11_Microsoft_WARP_7600_CPU_Software_Renderer_capture.json  DX11_Microsoft_WARP_9800X3D_CPU_Software_Renderer_capture.json  DX11_NVIDIA_GeForce_GTX_970_capture.json  DX11_NVIDIA_GeForce_RTX_5090_#1_particles16777216_capture.json  DX11_NVIDIA_GeForce_RTX_5090_capture.json  DX11_Radeon_RX_580_Series_capture.json  DX11_Radeon_Vega_Frontier_Edition_capture.json  DX12_AMD_FirePro_D700__FireGL_V__#1_capture.json  DX12_AMD_FirePro_D700__FireGL_V__#2_capture.json  DX12_AMD_Radeon_RX_6600_XT__FL_12_1_capture.json  DX12_AMD_Radeon_RX_6900_XT__FL_12_1_capture.json  DX12_AMD_Radeon_RX_6900_XT_flights3_particles1048576_capture.json  DX12_AMD_Radeon_RX_6900_XT_particles16777216_capture.json  DX12_AMD_Radeon_RX_9070_XT_capture.json  DX12_AMD_Radeon_RX_9070_XT_flights3_particles1048576_capture.json  DX12_AMD_Radeon_RX_9070_XT_flights4_particles1048576_capture.json  DX12_AMD_Radeon_RX_9070_XT_particles16777216_capture.json  DX12_AMD_Radeon_TM_7600_Graphics__FL_12_1_capture.json  DX12_AMD_Radeon_TM__Graphics__FL_12_1_capture.json  DX12_E5-2697v2_Microsoft_Basic_Render_Driver_capture.json  DX12_Mi_Pad_5_Adreno_640_GPU_particles1048576_capture.json  DX12_Microsoft_Basic_Render_Driver_capture.json  DX12_Microsoft_Basic_Render_Driver_particles1048576_capture.json  (+41 more)
results/: results.json
scripts/: 3dmark_extracted.json  3dmark_scores.json  batch_benchmark.py  compare_3dmark.py  compare_rdoc_timing.py  compile_shaders.bat  export_report.py  extract_3dmark.py  plot_amd_analysis.py  plot_results.py  rdoc_analyse.py  rdoc_export_timing.py
shaders/: compute.comp  compute.hlsl  compute_gl.comp  particle.frag  particle.metal  particle.vert  particle_gl.frag  particle_gl.vert  particle_ps.hlsl  particle_vs.hlsl
src/: app_base.cpp  app_base.h  benchmark_results.cpp  benchmark_results.h  dx11_backend.cpp  dx11_backend.h  dx12_backend.cpp  dx12_backend.h  gpu_common.h  main.cpp  metal_backend.h  metal_backend.mm  metal_probe.h  metal_probe.mm  opengl_backend.cpp  opengl_backend.h  vulkan_backend.cpp  vulkan_backend.h
(+53 files in other folders)
